fix: 修复块滚动条层级问题 | Fix the issue of the block scrollbar layer.

--- a/style/module/panel-editor.less
+++ b/style/module/panel-editor.less
@@ -131,7 +131,7 @@
 
     .protyle-scroll__bar {
         right: -98px;
-        z-index: auto;
+        // z-index: 1;
     }
 }
 
